saves/test/demo_full_20240802_193545/always_casez/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp always_casez_tb.v always_casez.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
always_casez_tb.v:71: $finish called at 10000 (1ps)

iverilog cmd 2 error:

